<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/panelbackground">
    <group
        android:id="@+id/top_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:checked="true"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_libretto"
            android:icon="@drawable/ic_menu_libretto"
            android:title="@string/menu_libretto" />
        <item
            android:id="@+id/nav_corsi"
            android:icon="@drawable/ic_menu_credits"
            android:title="@string/menu_corsi" />
        <item
            android:id="@+id/nav_appelli"
            android:icon="@drawable/ic_menu_esami"
            android:title="@string/menu_appelli" />
        <item
            android:id="@+id/nav_orario"
            android:icon="@drawable/ic_menu_clock"
            android:title="@string/menu_orario" />
    </group>

    <group
        android:id="@+id/bottom_menu"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_preferenze"
            android:icon="@drawable/ic_menu_preferenze"
            android:title="@string/menu_preferenze" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/menu_sync" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_info" />
    </group>
</menu>
