<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/previsioni_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingBottom="10dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voto"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/variazione"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
