<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="progettomobdev.it.myuni.ModificaAppello"
    tools:showIn="@layout/activity_modifica_appello"
    android:background="@color/background">

    <LinearLayout
        android:translationZ="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:background="@color/panelbackground">

        <!-- IMPORTANTE: serve per non dare subito il focus alla data -->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:text="@string/corso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginTop="5pt"
            android:layout_marginBottom="5pt"
            android:id="@+id/nome_materia_appello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo" />

        <Spinner
            android:id="@+id/tipo_appello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:layout_marginTop="5pt"
            android:entries="@array/tipologia_esame" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/aula_appello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aula"
                android:lines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/data_appello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                android:lines="1"
                android:inputType="date"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ora_appello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ora"
                android:lines="1"
                android:inputType="time"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/salva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check" />

</RelativeLayout>
