<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="progettomobdev.it.myuni.ModificaEsame"
    tools:showIn="@layout/activity_modifica_esame"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/panelbackground"
        android:orientation="vertical"
        android:padding="15dp"
        android:translationZ="1dp">

        <!-- IMPORTANTE: serve per non dare subito il focus alla data -->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/corso" />

        <Spinner
            android:id="@+id/nome_materia_esame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:layout_marginTop="5pt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voto" />

        <Spinner
            android:id="@+id/voto_nuovo_esame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:layout_marginTop="5pt"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/data_nuovo_esame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data"/>

        <EditText
            android:id="@+id/data_nuovo_esame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>-->

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/salva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check" />
</RelativeLayout>
