<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:scrollbarAlwaysDrawHorizontalTrack="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/corso"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinnerCorso"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Ora Inizio:"
            android:layout_alignBaseline="@+id/inizio"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/inizio"
            android:layout_below="@+id/spinnerCorso"
            android:layout_marginStart="100dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textView3"
            android:text="Ora Fine:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignBaseline="@+id/fine"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/fine"
            android:layout_below="@+id/inizio"
            android:layout_marginStart="100dp"
            android:textAlignment="center"
            />
			
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignBaseline="@+id/aula"
            android:text="Aula:"
            android:layout_below="@id/fine"/>
        
		<EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/aula"
            android:layout_marginStart="100dp"
            android:layout_below="@id/fine"
            android:textAlignment="center"/>

		<TextView
            android:id="@+id/giorno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textView4"
            android:layout_alignBaseline="@+id/spinnerGiorno"
            android:text="@string/giorno" />

        <Spinner
            android:id="@+id/spinnerGiorno"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/aula"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:entries="@array/days"
            android:spinnerMode="dropdown"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerGiorno"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:text="@string/aggiungi" />

    </RelativeLayout>

</ScrollView>
